--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
         </dependency>
 
 
+        <!-- java对象 和json对象互转  -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+
+
         <!--  添加 阿里云的oss -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
