--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
             <version>3.10.2</version>
         </dependency>
 
+        <!--jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+        <!-- fastjson   -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
 
     </dependencies>
 
